tests/errors/E019.zen
bool main() {
    return !42;  // E019: Logical not operator used with non-boolean operand
}